# iris

./: .cargo-sandbox.env  .gitignore  ARCHITECTURE.md  Auto-Setup-UTF8.ps1  CARGO-PERFORMANCE-OPTIMIZATION.md  Cargo.toml  DOM_COMPUTED_STYLES_REPORT.md  ENV-CONFIG.md  Enable-UTF8.ps1  FIX_BLANK_WINDOW_SUMMARY.md  FLEX_LAYOUT_ENHANCEMENT_REPORT.md  GPU_RENDER_INTEGRATION_SUMMARY.md  GPU_RENDER_WINDOW_EXAMPLE.md  GRADIENT_BACKGROUND_IMPLEMENTATION.md  GRADIENT_FEATURE_COMPLETE.md  GRADIENT_FIX_COMPLETE.md  GRADIENT_TEST_VERIFICATION_REPORT.md  IRIS_CLI_DEV_IMPLEMENTATION.md  IRIS_LAYOUT_ENHANCEMENT_REPORT.md  LICENSE  LOAD_REAL_VUE_SFC_SUMMARY.md  PHASE0_REFACTOR_REPORT.md  PHASE_B_COMPLETION_SUMMARY.md  PRECISE_HEIGHT_AND_CONSTRAINTS_REPORT.md  PROGRESSIVE_IMPLEMENTATION_PLAN.md  PowerShell-Profile.ps1  PowerShell_UTF8_Profile.ps1  QUICK-START.md  README.md  README.zh-CN.md  REVERSE_DIRECTION_COMPLETE_REPORT.md  ROADMAP_AND_PROGRESS.md  SFC_COMPILATION_FIX_REPORT.md  SWC-IMPLEMENTATION-FEASIBILITY.md  SWC-INTEGRATION-ISSUES.md  TEST-REPORT.md  TEST_COVERAGE_REPORT.md  TEST_VERIFICATION_REPORT.md  TestComponent.vue  apply-cargo-optimizations.ps1  (+21 more)
.cargo/: config.toml
.qoder/: persistent-memory.md  session-resume.md
crates/iris-ai/: Cargo.toml
crates/iris-ai-cli/: Cargo.toml
crates/iris-ai-cli/src/: main.rs
crates/iris-ai-cli/src/commands/: download.rs  edit.rs  info.rs  mod.rs  review.rs
crates/iris-ai/src/: config.rs  downloader.rs  engine.rs  lib.rs  prompt.rs  review.rs
crates/iris-app/: Cargo.toml
crates/iris-app/examples/: sfc_integration.rs
crates/iris-app/examples/demo/: App.vue  minimal_demo.rs
crates/iris-app/src/: main.rs
crates/iris-cli/: Cargo.toml
crates/iris-cli/src/: config.rs  main.rs  utils.rs
crates/iris-cli/src/commands/: build.rs  dev.rs  info.rs  mod.rs
crates/iris-core/: Cargo.toml
crates/iris-core/src/: lib.rs  runtime.rs  window.rs
crates/iris-cssom/: Cargo.toml
crates/iris-cssom/src/: bridge.rs  css.rs  css_modules.rs  cssom.rs  cssrule.rs  cssrulelist.rs  lib.rs  stylesheet.rs
crates/iris-dom/: Cargo.toml
crates/iris-dom/src/: bom.rs  event.rs  lib.rs  vnode.rs
crates/iris-engine/: Cargo.toml  test_vtree_dom.vue
crates/iris-engine/examples/: demo_app.vue  gpu_render_integration.rs  gpu_render_window.rs  radial_gradient_demo.rs  radial_gradient_demo.vue  radial_gradient_window.rs
crates/iris-engine/src/: dev_tools.rs  dirty_rect_manager.rs  error_handling.rs  lib.rs  orchestrator.rs  vnode_renderer.rs
crates/iris-engine/src/animation_engine/: applier.rs  easing.rs  keyframes.rs  mod.rs  transform.rs
crates/iris-engine/tests/: e2e_integration_test.rs  gpu_render_integration_test.rs  performance_benchmarks.rs  rendering_e2e_test.rs
crates/iris-gpu/: Cargo.toml  TEXTURE_INTEGRATION.md
crates/iris-gpu/src/: batch_renderer.rs  batch_shader.wgsl  canvas.rs  file_watcher.rs  font_atlas.rs  lib.rs  text_renderer.rs  texture_cache.rs
crates/iris-gpu/tests/: file_watcher_integration.rs  gpu_texture_real.rs  gpu_texture_rendering.rs
crates/iris-jetcrab/: Cargo.toml
crates/iris-jetcrab-cli/: Cargo.toml
crates/iris-jetcrab-cli/src/: main.rs  utils.rs
crates/iris-jetcrab-cli/src/server/: ai_inspector.rs  compiler_cache.rs  hmr.rs  http_server.rs  mod.rs  progress.html  routes.rs
crates/iris-jetcrab-daemon/: Cargo.toml  build.rs
crates/iris-jetcrab-daemon/res/: icon.rc
crates/iris-jetcrab-daemon/src/: config.rs  floating_window.rs  main.rs  particles.rs  process_manager.rs  renderer.rs
crates/iris-jetcrab-daemon/tests/: api_integration_test.rs
crates/iris-jetcrab-engine/: Cargo.toml  WASM_API.md  build-wasm-engine.ps1  build-wasm-engine.sh
crates/iris-jetcrab-engine/src/: dependency_scanner.rs  dependency_tree.rs  engine.rs  hmr.rs  lib.rs  module_graph.rs  npm_downloader.rs  project_scanner.rs  sfc_compiler.rs  vue_compiler.rs  wasm_api.rs
crates/iris-jetcrab-engine/tests/: dependency_tree_test.rs  internal_package_filter_test.rs
crates/iris-jetcrab/src/: bridge.rs  cpm.rs  esm.rs  lib.rs  module.rs  runtime.rs  wasm_bridge.rs  web_apis.rs  web_apis_enhanced.rs
crates/iris-js/: Cargo.toml
crates/iris-js/src/: dom_bindings.rs  es_modules.rs  lib.rs  module.rs  vm.rs  vue.rs  web_apis.rs
crates/iris-layout/: Cargo.toml
crates/iris-layout/src/: cache.rs  css.rs  dom.rs  domtree.rs  event.rs  float_layout.rs  grid.rs  html.rs  layout.rs  lib.rs  positioning.rs  style.rs  table_layout.rs  vdom.rs
crates/iris-runtime/: API_VALIDATE_PROJECT.md  Cargo.toml  DEVELOPMENT.md  ERROR_HANDLING.md  README.md  VUE_PROJECT_DETECTION.md  WORKFLOW.md  build-wasm.ps1  build-wasm.sh  demo-error-handling.js  package-lock.json  package.json
crates/iris-runtime/lib/: dev-server.js  server.js
crates/iris-runtime/lib/routes/: api.js  hmr.js  mock-api.js  npm-package.js  source.js  vue-module.js
crates/iris-runtime/lib/services/: compiler-cache.js  file-watcher.js  mock-engine.js  mock-scanner.js  wasm-bridge.js
crates/iris-runtime/lib/templates/: README.md  index.html  resolve.html
crates/iris-runtime/lib/utils/: html.js  import-rewriter.js  mime.js  port.js  vue-detect.js
crates/iris-runtime/src/: compiler.rs  hmr.rs  lib.rs
crates/iris-sfc/: CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  TYPESCRIPT_ARCHITECTURE.md
crates/iris-sfc-wasm/: Cargo.toml  build-wasm.bat
crates/iris-sfc-wasm/src/: lib.rs
crates/iris-sfc/examples/: sfc_demo.rs
crates/iris-sfc/src/: cache.rs  css_modules.rs  less_processor.rs  lib.rs  postcss_processor.rs  scoped_css.rs  script_setup.rs  scss_processor.rs  template_compiler.rs  ts_compiler.rs
crates/iris-sfc/tests/: integration_test.rs
docs/: CARGO_SANDBOX_GUIDE.md  COMPILER_INTEGRATION_SUMMARY.md  DEPENDENCY_TREE_MANAGEMENT.md  DUAL_RUNTIME_ARCHITECTURE.md  INTERNAL_PACKAGE_FILTER.md  IRIS_JETCRAB_CLI_ARCHITECTURE.md  IRIS_JETCRAB_ENGINE_IMPLEMENTATION.md  IRIS_RUNTIME_ARCHITECTURE_CHANGE.md  IRIS_RUNTIME_CLEANUP_SUMMARY.md  IRIS_RUNTIME_WASM_IMPLEMENTATION.md  NPM_AUTO_DOWNLOAD.md  NPM_DOWNLOADER_IMPLEMENTATION.md  NPM_DOWNLOAD_PROGRESS.md  项目功能描述.md  (+5 more)
(+166 files in other folders)
