[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Iris Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/iris-engine/iris"
rust-version = "1.78"

[workspace.dependencies]
# Iris internal crates
iris-core = { path = "crates/iris-core", version = "0.1.0" }
iris-gpu = { path = "crates/iris-gpu", version = "0.1.0" }
iris-layout = { path = "crates/iris-layout", version = "0.1.0" }
iris-dom = { path = "crates/iris-dom", version = "0.1.0" }
iris-js = { path = "crates/iris-js", version = "0.1.0" }
iris-sfc = { path = "crates/iris-sfc", version = "0.1.0" }
iris-app = { path = "crates/iris-app", version = "0.1.0" }
iris-engine = { path = "crates/iris-engine", version = "0.1.0" }
iris-cli = { path = "crates/iris-cli", version = "0.1.0" }
iris-cssom = { path = "crates/iris-cssom", version = "0.1.0" }

# External shared dependencies (to be expanded during development)
tokio = { version = "1", features = ["full"] }
winit = "0.30"
wgpu = "24"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
cssparser = "0.33"
