[package]
name = "iris-ai-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Iris AI CLI - 本地 AI 代码编辑助手（基于 Qwen2.5-Coder GGUF）"
keywords = ["cli", "ai", "code-editor", "llm", "local-ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "iris-ai"
path = "src/main.rs"

[dependencies]
# AI 推理核心
iris-ai.workspace = true

# CLI 框架
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"

# 异步
tokio = { workspace = true }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 工具
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.9"
