[package]
name = "iris-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Iris Runtime CLI - Build and develop Vue 3 applications with Rust+WebGPU runtime"
keywords = ["cli", "vue", "runtime", "webgpu", "build-tool"]
categories = ["command-line-utilities", "development-tools", "gui"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
winit = { workspace = true }
pollster = "0.3"

# Iris Engine 集成
iris-engine.workspace = true
iris-gpu.workspace = true
iris-sfc.workspace = true

[dev-dependencies]
tempfile = "3.9"
