[package]
name = "iris-cssom"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Iris CSS Object Model (CSSOM) implementation: CSS parsing, style computation, CSS Modules, and Web API"

[dependencies]
iris-core.workspace = true
cssparser.workspace = true
regex = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
