[package]
name = "iris-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Iris Engine —— Rust+WebGPU next-gen buildless frontend runtime with Vue 3 support and runtime orchestration"
keywords = ["gui", "webgpu", "vue", "runtime", "renderer"]
categories = ["gui", "rendering", "wasm", "development-tools"]

[dependencies]
iris-core.workspace = true
iris-gpu.workspace = true
iris-layout.workspace = true
iris-dom.workspace = true
iris-js.workspace = true
iris-sfc.workspace = true
iris-cssom.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
winit = { workspace = true }
pollster = "0.3"
regex = "1"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
fontdue = "0.9"
notify = "6.1"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "gpu_render_integration"
required-features = []

[[example]]
name = "gpu_render_window"
required-features = []

[[example]]
name = "radial_gradient_demo"
required-features = []

[[example]]
name = "radial_gradient_window"
required-features = []
