[package]
name = "iris-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Iris WebGPU hardware rendering pipeline: batch rendering, vector drawing, font atlas, layer compositing"

[dependencies]
iris-core.workspace = true
wgpu.workspace = true
winit.workspace = true
bytemuck = { version = "1", features = ["derive"] }
fontdue = "0.9"
image = "0.25"
notify = "7.0"
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
rfd = "0.15"
tracing = "0.1"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
