[package]
name = "iris-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Iris Runtime - Vue 3 development server powered by WebAssembly"
keywords = ["vue", "dev-server", "wasm", "hmr", "runtime"]
categories = ["wasm", "development-tools", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# WASM 绑定
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
serde-wasm-bindgen = "0.6.3"
js-sys = "0.3.66"

# 核心编译能力
iris-jetcrab = { path = "../iris-jetcrab" }
iris-sfc.workspace = true
iris-cssom.workspace = true

# 工具库
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
