[package]
name = "iris-sfc-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Iris SFC WASM compiler - standalone Vue SFC compilation for WASM target"

[package.metadata.wasm-pack]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

# Vue SFC 模板编译
html5ever = "0.27"
markup5ever_rcdom = "0.3"

# SCSS 编译器
grass = "0.13"

# LRU 缓存
lru = "0.12"
