[package]
name = "iris-sfc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Iris SFC/TS instant transpilation layer: swc TS-to-JS, Vue SFC compiler, style injection"

[dependencies]
iris-core.workspace = true
iris-js.workspace = true
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"

# swc TypeScript 编译器
swc = "0.270"
swc_common = "0.37"
swc_ecma_parser = "0.149"
swc_ecma_transforms = "0.234"
swc_ecma_transforms_typescript = "0.193"
swc_ecma_codegen = "0.151"

# HTML 解析（用于模板编译器）
html5ever = "0.27"
markup5ever_rcdom = "0.3"
