[package]
name = "iris-sfc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Iris SFC/TS instant transpilation layer: swc TS-to-JS, Vue SFC compiler, style injection"

[dependencies]
iris-core.workspace = true
iris-js.workspace = true
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"

# swc TypeScript 编译器（使用最新版本）
swc = "62"
swc_common = "21"
swc_ecma_parser = "39"
swc_ecma_transforms_typescript = "46"
swc_ecma_codegen = "26"
swc_ecma_ast = "23"

# HTML 解析（用于模板编译器）
html5ever = "0.27"
markup5ever_rcdom = "0.3"
